// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SearchHint should match snapshot, with searchType 1`] = `
<Fragment>
  <ul
    className="search-hint__suggestions-list"
    role="list"
  >
    <li
      className="search-hint__suggestions-list__option"
      key="From:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          From:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages from a user"
          id="search_list_option.from"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="In:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          In:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages in a channel"
          id="search_list_option.in"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="On:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          On:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages on a date"
          id="search_list_option.on"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="Before:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          Before:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages before a date"
          id="search_list_option.before"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="After:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          After:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages after a date"
          id="search_list_option.after"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="-"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          —
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Exclude search terms"
          id="search_list_option.exclude"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="\\"\\""
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          ""
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages with phrases"
          id="search_list_option.phrases"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;

exports[`components/SearchHint should match snapshot, with title 1`] = `
<Fragment>
  <h4
    className="search-hint__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Search options"
      id="search_bar.usage.title"
    />
  </h4>
  <ul
    className="search-hint__suggestions-list"
    role="list"
  >
    <li
      className="search-hint__suggestions-list__option"
      key="From:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          From:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages from a user"
          id="search_list_option.from"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="In:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          In:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages in a channel"
          id="search_list_option.in"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="On:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          On:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages on a date"
          id="search_list_option.on"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="Before:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          Before:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages before a date"
          id="search_list_option.before"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="After:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          After:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages after a date"
          id="search_list_option.after"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="-"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          —
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Exclude search terms"
          id="search_list_option.exclude"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="\\"\\""
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          ""
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages with phrases"
          id="search_list_option.phrases"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;

exports[`components/SearchHint should match snapshot, without searchType 1`] = `
<div
  className="search-hint__search-type-selector"
>
  <div>
    <MemoizedFormattedMessage
      defaultMessage="What are you searching for?"
      id="search_bar.usage.search_type_question"
    />
  </div>
  <div
    className="button-container"
  >
    <button
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
    >
      <i
        className="icon icon-message-text-outline"
      />
      <MemoizedFormattedMessage
        defaultMessage="Messages"
        id="search_bar.usage.search_type_messages"
      />
    </button>
    <button
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
    >
      <i
        className="icon icon-file-text-outline"
      />
      <MemoizedFormattedMessage
        defaultMessage="Files"
        id="search_bar.usage.search_type_files"
      />
    </button>
  </div>
</div>
`;

exports[`components/SearchHint should match snapshot, without title 1`] = `
<Fragment>
  <ul
    className="search-hint__suggestions-list"
    role="list"
  >
    <li
      className="search-hint__suggestions-list__option"
      key="From:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          From:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages from a user"
          id="search_list_option.from"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="In:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          In:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages in a channel"
          id="search_list_option.in"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="On:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          On:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages on a date"
          id="search_list_option.on"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="Before:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          Before:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages before a date"
          id="search_list_option.before"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="After:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          After:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages after a date"
          id="search_list_option.after"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="-"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          —
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Exclude search terms"
          id="search_list_option.exclude"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="\\"\\""
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          ""
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <MemoizedFormattedMessage
          defaultMessage="Messages with phrases"
          id="search_list_option.phrases"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;
